syntax = "proto3";

package exam;

import "google/protobuf/timestamp.proto";

message ClassworkRequest {
    int64 student_user_no = 1;
    google.protobuf.Timestamp time = 2;
}

message ClassworkResponse {
    repeated Work work = 1;
}

message Work {
    string subject_name = 1;
    int64 course_no = 2;
    int64 class_no = 3;
    string class_name = 4;
    int32 course_item_order = 5;
    google.protobuf.Timestamp created_at = 6;
    repeated Exam exam = 7;
}

message Exam {
    int64 exam_no = 1;
    int32 exam_status = 2;
    int32 exam_type_code = 3;
    google.protobuf.Timestamp created_at = 4;
    int32 exam_class_order = 5;
    Question question = 6;
}

message Question {
    int32 total = 1;
    int32 error = 2;
}

service ExamService {
    rpc Classwork (ClassworkRequest) returns (ClassworkResponse);
}
